Refactor CtaBanner to use button slot and fix styling
- Refactored CtaBanner to use UniformSlot for buttons instead of direct parameters
- Updated CTA component to support CtaBanner-specific styling
- Fixed button styling to match original design (white bg with primary text for primary, white border/text for secondary)
- Added CSS styling for CtaBanner buttons with arrow icon on primary button
- Fixed LifestyleGallery item rendering issues with proper grid layout
- Updated Uniform component definitions and patterns to use new slot structure
- Migrated existing CtaBanner instances in compositions to use new slot-based approach

--- a/uniform-data/component/ctaBanner.yaml
+++ b/uniform-data/component/ctaBanner.yaml
@@ -27,32 +27,6 @@ parameters:
     typeConfig:
       required: false
     localizable: true
-  - id: primaryButtonText
-    name: Primary Button Text
-    type: text
-    guidance: Text for the main CTA button, e.g., 'Begin Your Story'
-    typeConfig:
-      required: false
-    localizable: true
-  - id: primaryButtonLink
-    name: Primary Button Link
-    type: link
-    guidance: Link destination for the primary CTA button
-    typeConfig:
-      required: false
-  - id: secondaryButtonText
-    name: Secondary Button Text
-    type: text
-    guidance: Text for the secondary CTA button, e.g., 'Our Heritage'
-    typeConfig:
-      required: false
-    localizable: true
-  - id: secondaryButtonLink
-    name: Secondary Button Link
-    type: link
-    guidance: Link destination for the secondary CTA button
-    typeConfig:
-      required: false
   - id: backgroundImage
     name: Background Image
     type: asset
@@ -77,9 +51,18 @@ description: >-
   Full-width call-to-action banner with background image, overlay, and prominent
   CTA buttons. Perfect for conversion-focused sections.
 useTeamPermissions: true
-slots: []
+slots:
+  - id: buttons
+    name: Buttons
+    maxComponents: 2
+    minComponents: 0
+    allowedComponents:
+      - cta
+    allowAllComponents: false
+    inheritAllowedComponents: false
+    patternsInAllowedComponents: true
 titleParameter: eyebrow
 thumbnailParameter: backgroundImage
 canBeComposition: false
 created: '2025-11-25T13:22:28.303453+00:00'
-updated: '2025-11-25T13:22:28.303453+00:00'
+updated: '2025-11-26T14:10:31.257579+00:00'
