--- a/uniform-data/component/header.yaml
+++ b/uniform-data/component/header.yaml
@@ -1,9 +1,23 @@
-# yaml-language-server: $schema=https://eu.uniform.app/schemas/json-schema/component-definition/v1.json
-$schema: https://eu.uniform.app/schemas/json-schema/component-definition/v1.json
+# yaml-language-server: $schema=https://uniform.app/schemas/json-schema/component-definition/v1.json
+$schema: https://uniform.app/schemas/json-schema/component-definition/v1.json
 id: header
 name: Header
 icon: border-top
-parameters: []
+parameters:
+  - id: logoText
+    name: Logo Text
+    type: text
+    guidance: Text for the logo/brand name
+    localizable: true
+  - id: cartCount
+    name: Cart Count
+    type: text
+    guidance: Number of items in cart (displayed as badge)
+  - id: searchPlaceholder
+    name: Search Placeholder
+    type: text
+    guidance: Placeholder text for the search input
+    localizable: true
 categoryId: 71244a75-2906-47dc-bf08-ecb810656b7a
 description: Clean header component with navigation links
 previewImageUrl: https://i.imgur.com/86qpYIg.png
@@ -16,5 +30,5 @@ slots:
     inheritAllowedComponents: false
     patternsInAllowedComponents: true
 canBeComposition: false
-created: '2025-09-18T09:15:58.309187+00:00'
-updated: '2025-09-18T12:28:50.379258+00:00'
+created: '2025-11-25T11:16:14.311719+00:00'
+updated: '2025-11-26T09:03:56.061554+00:00'
