--- a/uniform-data/component/navigationLink.yaml
+++ b/uniform-data/component/navigationLink.yaml
@@ -1,5 +1,5 @@
-# yaml-language-server: $schema=https://eu.uniform.app/schemas/json-schema/component-definition/v1.json
-$schema: https://eu.uniform.app/schemas/json-schema/component-definition/v1.json
+# yaml-language-server: $schema=https://uniform.app/schemas/json-schema/component-definition/v1.json
+$schema: https://uniform.app/schemas/json-schema/component-definition/v1.json
 id: navigationLink
 name: Navigation Link
 icon: link
@@ -13,6 +13,10 @@ parameters:
     name: Link URL
     type: link
     guidance: The destination URL for the navigation link
+  - id: highlight
+    name: Highlight
+    type: checkbox
+    guidance: Show "New" badge on this navigation link
 categoryId: 71244a75-2906-47dc-bf08-ecb810656b7a
 description: A navigation link for use in headers and menus
 previewImageUrl: https://i.imgur.com/2FVsZ3M.png
@@ -20,5 +24,5 @@ useTeamPermissions: true
 slots: []
 titleParameter: linkText
 canBeComposition: false
-created: '2025-09-18T09:18:26.348935+00:00'
-updated: '2025-09-18T12:27:54.899132+00:00'
+created: '2025-11-25T11:16:14.205456+00:00'
+updated: '2025-11-26T09:03:57.640794+00:00'
