--- a/uniform-data/component/page.yaml
+++ b/uniform-data/component/page.yaml
@@ -91,6 +91,7 @@ slots:
       - testimonialSection
       - ctaBanner
       - productHero
+      - contentBlock
     allowAllComponents: false
     inheritAllowedComponents: false
     patternsInAllowedComponents: false
@@ -100,5 +101,5 @@ slots:
       - footer
     inheritAllowedComponents: false
 canBeComposition: true
-created: "2025-11-25T11:16:14.048532+00:00"
-updated: "2025-11-26T08:48:28.895444+00:00"
+created: '2025-11-25T11:16:14.048532+00:00'
+updated: '2025-11-26T17:04:48.718168+00:00'
