--- a/uniform-data/component/featuredCollections.yaml
+++ b/uniform-data/component/featuredCollections.yaml
@@ -2,7 +2,7 @@
 $schema: https://uniform.app/schemas/json-schema/component-definition/v1.json
 id: featuredCollections
 name: Featured Collections
-icon: screen
+icon: view-cols
 parameters:
   - id: title
     name: Title
@@ -18,9 +18,12 @@ parameters:
     typeConfig:
       required: false
     localizable: true
+categoryId: 67b4f854-b38d-4600-a6e6-275a15fe7545
 description: >-
   A section showcasing furniture collections in a responsive grid. Add
   Collection Card components to the collections slot.
+previewImageUrl: >-
+  https://img.uniform.global/p/ZOPy1_8-Qp-0rc9eM35cqw/LHFfdXKST9O7ki3wbP5pUQ-Screenshot-2025-11-26-at-7.07.29-PM.png
 useTeamPermissions: true
 slots:
   - id: collections
@@ -34,4 +37,4 @@ slots:
 titleParameter: title
 canBeComposition: false
 created: '2025-11-25T11:53:49.529132+00:00'
-updated: '2025-11-25T11:53:49.529132+00:00'
+updated: '2025-11-26T17:08:21.157954+00:00'
