Add product detail components and Uniform entries
- Add ProductImageGallery, ProductInfo, and RelatedProducts components
- Add accordion UI component for product details
- Add product entries and component patterns for Uniform
- Add image mapping scripts and utilities
- Update package dependencies
- Add Chairs composition and project map node

--- a/package.json
+++ b/package.json
@@ -8,25 +8,32 @@
     "start": "next start",
     "lint": "next lint",
     "uniform:pull": "uniform sync pull",
-    "uniform:push": "uniform sync push"
+    "uniform:push": "uniform sync push",
+    "map-images": "tsx scripts/map-images-to-entries.ts",
+    "map-images-simple": "tsx scripts/map-images-simple.ts",
+    "map-summary": "tsx scripts/summarize-mappings.ts",
+    "update-entries-assets": "tsx scripts/update-entries-with-assets.ts",
+    "update-entries-mcp": "tsx scripts/update-entries-mcp.ts",
+    "test-uniform": "tsx scripts/test-uniform-api.ts"
   },
   "dependencies": {
+    "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
-    "@uniformdev/assets": "^20.42.1",
-    "@uniformdev/canvas": "^20.42.1",
-    "@uniformdev/canvas-next": "^20.42.1",
-    "@uniformdev/canvas-react": "^20.42.1",
-    "@uniformdev/context": "^20.42.1",
-    "@uniformdev/context-next": "^20.42.1",
-    "@uniformdev/context-react": "^20.42.1",
-    "@uniformdev/project-map": "^20.42.1",
-    "@uniformdev/redirect": "^20.42.1",
-    "@uniformdev/richtext": "^20.42.1",
+    "@uniformdev/assets": "^20.45.0",
+    "@uniformdev/canvas": "^20.45.0",
+    "@uniformdev/canvas-next": "^20.45.0",
+    "@uniformdev/canvas-react": "^20.45.0",
+    "@uniformdev/context": "^20.45.0",
+    "@uniformdev/context-next": "^20.45.0",
+    "@uniformdev/context-react": "^20.45.0",
+    "@uniformdev/project-map": "^20.45.0",
+    "@uniformdev/redirect": "^20.45.0",
+    "@uniformdev/richtext": "^20.45.0",
     "@vercel/functions": "^3.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -40,13 +47,17 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
     "@tailwindcss/postcss": "^4.1.13",
+    "@types/form-data": "^2.5.0",
     "@types/node": "^24.5.2",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
-    "@uniformdev/cli": "^20.42.1",
+    "@uniformdev/cli": "^20.45.0",
+    "dotenv": "^17.2.3",
     "eslint": "^9.35.0",
     "eslint-config-next": "15.5.3",
+    "form-data": "^4.0.1",
     "tailwindcss": "^4.1.13",
+    "tsx": "^4.19.2",
     "typescript": "^5.9.2"
   }
 }
