--- a/package.json
+++ b/package.json
@@ -3,12 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
+    "dev": "run-s uniform:manifest next:dev",
+    "next:dev": "next dev --turbopack",
+    "build": "run-s uniform:manifest next:build",
+    "next:build": "next build",
     "start": "next start",
     "lint": "next lint",
     "uniform:pull": "uniform sync pull",
     "uniform:push": "uniform sync push",
+    "uniform:manifest": "uniform context manifest download --output ./src/uniformContext/contextManifest.json",
+    "uniform:manifest:publish": "uniform context manifest publish",
     "map-images": "tsx scripts/map-images-to-entries.ts",
     "map-images-simple": "tsx scripts/map-images-simple.ts",
     "map-summary": "tsx scripts/summarize-mappings.ts",
@@ -56,6 +60,7 @@
     "eslint": "^9.35.0",
     "eslint-config-next": "15.5.3",
     "form-data": "^4.0.1",
+    "npm-run-all": "^4.1.5",
     "tailwindcss": "^4.1.13",
     "tsx": "^4.19.2",
     "typescript": "^5.9.2"
