Fix component registration and sync Uniform data
- Add side-effect imports to index.ts to ensure registerUniformComponent calls execute
- Import @/components in page-composition.tsx for component registration
- Sync latest Uniform data (components, compositions, entries, project map nodes)
- Add new Related Products patterns and Products composition

--- a/src/uniformContext/contextManifest.json
+++ b/src/uniformContext/contextManifest.json
@@ -1,6 +1,34 @@
 {
   "project": {
-    "pz": {},
+    "pz": {
+      "enr": {
+        "pc": {
+          "cap": 100
+        }
+      },
+      "sig": {
+        "utmCampaignSocial": {
+          "str": 1,
+          "cap": 1,
+          "dur": "t",
+          "crit": {
+            "op": "&",
+            "type": "G",
+            "clauses": [
+              {
+                "type": "QS",
+                "match": {
+                  "cs": false,
+                  "op": "=",
+                  "rhs": "social_winter"
+                },
+                "queryName": "utm_campaign"
+              }
+            ]
+          }
+        }
+      }
+    },
     "test": {}
   }
 }
