--- a/uniform-data/component/page.yaml
+++ b/uniform-data/component/page.yaml
@@ -79,6 +79,7 @@ slots:
       - productImageGallery
       - productInfo
       - relatedProducts
+      - interactiveImage
     allowAllComponents: false
     inheritAllowedComponents: false
     patternsInAllowedComponents: false
@@ -89,4 +90,4 @@ slots:
     inheritAllowedComponents: false
 canBeComposition: true
 created: '2025-11-25T11:16:14.048532+00:00'
-updated: '2025-12-11T13:23:33.000447+00:00'
+updated: '2025-12-15T12:42:55.491893+00:00'
