Add @types/js-yaml dependency and remove PRODUCT_GRID_USAGE_GUIDE.md
- Added @types/js-yaml version 4.0.9 to package.json and package-lock.json for TypeScript support.
- Removed obsolete PRODUCT_GRID_USAGE_GUIDE.md file to streamline documentation.

--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@eslint/eslintrc": "^3.3.1",
     "@tailwindcss/postcss": "^4.1.13",
     "@types/form-data": "^2.5.0",
+    "@types/js-yaml": "^4.0.9",
     "@types/node": "^24.5.2",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
