--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@vercel/functions": "^3.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.26",
     "lucide-react": "^0.544.0",
     "next": "15.5.9",
     "react": "19.1.2",
