--- a/uniform-data/component/page.yaml
+++ b/uniform-data/component/page.yaml
@@ -80,6 +80,7 @@ slots:
       - productInfo
       - relatedProducts
       - interactiveImage
+      - collaborationHero
     allowAllComponents: false
     inheritAllowedComponents: false
     patternsInAllowedComponents: false
@@ -90,4 +91,4 @@ slots:
     inheritAllowedComponents: false
 canBeComposition: true
 created: '2025-11-25T11:16:14.048532+00:00'
-updated: '2025-12-15T12:42:55.491893+00:00'
+updated: '2025-12-16T19:55:52.665032+00:00'
