--- a/uniform-data/component/page.yaml
+++ b/uniform-data/component/page.yaml
@@ -81,6 +81,7 @@ slots:
       - relatedProducts
       - interactiveImage
       - collaborationHero
+      - colorShowcaseBlock
     allowAllComponents: false
     inheritAllowedComponents: false
     patternsInAllowedComponents: false
@@ -91,4 +92,4 @@ slots:
     inheritAllowedComponents: false
 canBeComposition: true
 created: '2025-11-25T11:16:14.048532+00:00'
-updated: '2025-12-16T19:55:52.665032+00:00'
+updated: '2025-12-16T20:09:53.922401+00:00'
